--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.status p 
+{
+	padding-top:6px;
+}
+
+.status 
+{
+	border-bottom:solid 1px #ccc	
+}
+
+.status.hover
+{
+	background:#FAFAFA;	
+}
+
+.status .admin
+{
+	display: none;
+}
+
+.status.hover .admin
+{
+	display: inline;
+}
