--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Checkbook</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+	<head>
+  		<title>Checkbook</title>
+  		<%= stylesheet_link_tag    "application", :media => "all" %>
+  		<%= javascript_include_tag "application" %>
+  		<%= csrf_meta_tags %>
+	</head>
+	<body>
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner"> 
+				<div class = "container">
+					<a class="brand" href="#">Checkbox</a>
+					<ul class="nav">
+						<li><%= link_to "All statuses", statuses_path%></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class = "container">
+			<%= yield %>
+		</div>
+	</body>
 </html>
