--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,16 +19,21 @@
 							<li><%= link_to current_user.full_name,edit_user_registration_path(current_user)%></li>
 							<li><%= link_to "Sign Out",destroy_user_session_path, method: :delete %></li>
 						<% else %>
-							<li><%= link_to "Register", new_user_registration_path %></li>
-							<li><%= link_to "Sign in", new_user_session_path %></li>
+							<li><%= link_to "Register", register_path %></li>
+							<li><%= link_to "Sign in", signin_path %></li>
 						<% end %>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<div class = "container">
-       		<p class="notice"><%= notice %></p>
-       		<p class="alert"><%= alert %></p>			
+			<% flash.each do |type,messege| %>
+				<div class="alert <%= flash_type_class(type) %>">
+    				<button type="button" class="close" data-dismiss="alert">&times;</button>
+    				<strong><%= messege %></strong> Best check yo self, you're not looking too good.
+    			</div>
+			<% end %>
+			
 			<%= yield %>
 		</div>
 	</body>
