--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -7,7 +7,7 @@
   <div class = "status">
     <div class="row">
       <div class = "span1">
-        avatar
+        <%= image_tag status.user.gravatar_url %>
       </div>
       <div class = "span7">
         <strong><%=  status.user.full_name %></strong> <br />
